# Milestone2-zomato

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  streamlit_app.py  test_phase4_demo.py  test_preferences.json
.streamlit/: config.toml  secrets.toml.example
Docs/: README.md  phase_wise_architecture.md
Docs/phase7/: README.md
Docs/phase8/: README.md
backend/: README.md  __init__.py
backend/app/: main.py  paths.py  pipeline.py  schemas.py
frontend/: .env.local.example  README.md  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx
frontend/src/components/: food-hero.tsx  home-screen.tsx  site-footer.tsx  site-header.tsx  themed-select.tsx
frontend/src/lib/: api.ts  types.ts
src/zomato_rec/: phase_wise_architecture.md
src/zomato_rec/phase4/: recommend.py  run.py
src/zomato_rec/web_ui/: app.py
tests/: test_phase1_preprocess.py  test_phase2_io.py  test_phase2_normalize.py  test_phase3_retrieve.py  test_phase4_parsing.py
